--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,18 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/pads_white_bg"
         android:label="@string/appName"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/pads_white_bg"
         android:supportsRtl="true"
         android:theme="@style/Theme.PADs"
         tools:targetApi="31">
         <activity
+            android:name=".ChatBot"
+            android:exported="false" />
+        <activity
             android:name=".AddData"
             android:exported="false" />
-
         <activity
             android:name=".HomePage"
             android:exported="true">
